Fix card uneven image size

--- a/index.css
+++ b/index.css
@@ -138,7 +138,7 @@ a {
 }
 
 .deck--image {
-    flex-basis: 6rem;
+    flex: 0 0 6rem;
 
     background-position: center;
     background-size: cover;
